tests/Checker/everything/errors/15a.vc
int main() {
    int a[3] = 1;
    return 1;
}
